--- a/public/index.html
+++ b/public/index.html
@@ -20,10 +20,10 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/media-queries.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup.css">
     <!-- <link rel="stylesheet" href="https://css/creative.min.css"> -->
-
      <!-- Script
      ================================================== -->
-  	<script src="%PUBLIC_URL%/js/modernizr.js"></script>
+     <script src="js/jquery.waypoints.min.js"></script>
+     <script src="%PUBLIC_URL%/js/modernizr.js"></script>
     <title>Kim Vo</title>
   </head>
   <body>
@@ -36,7 +36,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/jquery-1.10.2.min.js"><\/script>')</script>
     <script type="text/javascript" src="js/jquery-migrate-1.2.1.min.js"></script>
-
     <script src="js/jquery.flexslider.js"></script>
     <script src="js/waypoints.js"></script>
     <script src="js/jquery.fittext.js"></script>
