first draft of revamp mobile homepage

--- a/public/index.html
+++ b/public/index.html
@@ -19,12 +19,14 @@
   	<link rel="stylesheet" href="%PUBLIC_URL%/css/layout.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/media-queries.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
     <!-- <link rel="stylesheet" href="https://css/creative.min.css"> -->
      <!-- Script
      ================================================== -->
      <script src="js/jquery.waypoints.min.js"></script>
      <script src="%PUBLIC_URL%/js/modernizr.js"></script>
-    <title>Kim Vo</title>
+     <script src="https://kit.fontawesome.com/b2d9eed870.js" crossorigin="anonymous"></script>
+     <title>Kim Vo</title>
   </head>
   <body>
     <noscript>
